Первичная разметка главной страницы личного проекта

--- a/index.html
+++ b/index.html
@@ -5,8 +5,45 @@
     <title>HTML Academy: Седона</title>
   </head>
   <body>
-
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS, уровень 1</a>».</p>
-
+    <header class="main-header">
+      <nav class="main-navigation">
+        <a class="main-header-logo">
+          <img src="#" alt="Логотип Седона">
+        </a>
+        <ul class="site-navigation">
+          <li><a href="#">Информация</a></li>
+          <li><a href="#">Фото и видео</a></li>
+          <li><a href="#">Карта штата</a></li>
+          <li><a href="catalog.html">Гостиницы</a></li>
+        </ul>
+      </nav>
+    </header>
+    <main class="container">
+      <img src="#" alt="Добро пожаловать в Седону!">
+      <h1>Седона — небольшой городок в Аризоне,
+заслуживающий большего!</h1>
+      <p>Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
+      <h2>Заинтересовались?</h2>
+      <p>Укажите предполагаемые даты поездки,<br>
+      и мы покажем Вам лучшие предложения гостиниц в Седоне</p>
+      <span class="button">Поиск гостиницы в Седоне</span>
+    </main>
+    <footer class="main-footer">
+      <b>#VISITSEDONA</b>
+      <div class="footer-social">
+        <ul>
+          <li><a class="social-button" href="#">Твиттер</a></li>
+          <li><a class="social-button" href="#">Фейсбук</a></li>
+          <li><a class="social-button" href="#">Ютьюб</a></li>
+        </ul>
+      </div>
+      <p class="footer-copyright">
+        Website by
+        <a class="button" href="https://htmlacademy.ru/intensive/htmlcss">HTML Academy</a>
+      </p>
+    </footer>
+    <section class="modal modal-search">
+      <!-- Здесь будет форма -->
+    </section>
   </body>
 </html>
