--- a/catalog.html
+++ b/catalog.html
@@ -2,77 +2,91 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
-    <title>HTML Academy: Седона</title>
+    <title>Гостиницы</title>
   </head>
   <body>
     <header class="main-header">
       <nav class="main-navigation">
-        <a class="main-header-logo">
+        <a class="main-header-logo" href="index.html">
           <img src="#" alt="Логотип Седона">
         </a>
         <ul class="site-navigation">
           <li><a href="#">Информация</a></li>
           <li><a href="#">Фото и видео</a></li>
           <li><a href="#">Карта штата</a></li>
-          <li class="site-navigation-current"><a href="catalog.html">Гостиницы</a></li>
+          <li class="site-navigation-current"><a>Гостиницы</a></li>
         </ul>
       </nav>
     </header>
     <main class="container">
-        <h1 class="visually-hidden">Выбор типа жилья</h1>
-        <section class="catalog">
-            <ul class="catalog-list">
-                <li class="catalog-item">
-                    <p class="catalog-item-image">
-                        <a href="#">
-                            <img src="#" alt="Amara Resort & Spa">
-                        </a>
-                    </p>
-                    <h2>Amara Resort & Spa</h2>
-                    <span class="catalog-item-type">Гостиница</span>
-                    <span class="catalog-item-price">От 4000 Р.</span>
-                    <a class="button" href="#">Подробнее</a>
-                    <a class="button" href="#">Забронировать</a>
-                    <span class="catalog-item-rating">Рейтинг: 8,5</span>
-                </li>
-                <li class="catalog-item">
-                    <p class="catalog-item-image">
-                        <a href="#">
-                            <img src="#" alt="Desert Quail Inn">
-                        </a>
-                    </p>
-                    <h2>Desert Quail Inn</h2>
-                    <span class="catalog-item-type">Мотель</span>
-                    <span class="catalog-item-price">От 3000 Р.</span>
-                    <a class="button" href="#">Подробнее</a>
-                    <a class="button" href="#">Забронировать</a>
-                    <span class="catalog-item-rating">Рейтинг: 8,9</span>
-                </li>
-                <li class="catalog-item">
-                    <p class="catalog-item-image">
-                        <a href="#">
-                            <img src="#" alt="Villas at Poco Diablo">
-                        </a>
-                    </p>
-                    <h2>Villas at Poco Diablo</h2>
-                    <span class="catalog-item-type">Апартаменты</span>
-                    <span class="catalog-item-price">От 2000 Р.</span>
-                    <a class="button" href="#">Подробнее</a>
-                    <a class="button" href="#">Забронировать</a>
-                    <span class="catalog-item-rating">Рейтинг: 9,2</span>
-                </li>
-            </ul>
-        </section>
+      <h1 class="visually-hidden">Выбор типа жилья</h1>
+      <section class="catalog">
+        <h2 class="visually-hidden">Результаты поиска</h2>
+        <ul class="catalog-list">
+          <li class="catalog-item">
+            <article class="catalog-item-info">
+              <p class="catalog-item-image">
+                <a href="#">
+                  <img src="#" alt="Amara Resort & Spa">
+                </a>
+              </p>
+              <h3>Amara Resort & Spa</h3>
+              <span class="catalog-item-type">Гостиница</span>
+              <span class="catalog-item-price">От 4000 Р.</span>
+              <a class="button" href="#">Подробнее</a>
+              <a class="button" href="#">Забронировать</a>
+              <img src="#" alt="Рейтинг жилья 4 из 5">
+              <img src="#">
+              <img src="#">
+              <img src="#">
+              <span class="catalog-item-rating">Рейтинг: 8,5</span>
+            </article>
+          </li>
+          <li class="catalog-item">
+            <article class="catalog-item-info">
+              <p class="catalog-item-image">
+                <a href="#">
+                  <img src="#" alt="Desert Quail Inn">
+                </a>
+              </p>
+              <h3>Desert Quail Inn</h3>
+              <span class="catalog-item-type">Мотель</span>
+              <span class="catalog-item-price">От 3000 Р.</span>
+              <a class="button" href="#">Подробнее</a>
+              <a class="button" href="#">Забронировать</a>
+              <img src="#" alt="Рейтинг жилья 3 из 5">
+              <img src="#">
+              <img src="#">
+              <span class="catalog-item-rating">Рейтинг: 8,9</span>
+            </article>
+          </li>
+          <li class="catalog-item">
+            <article class="catalog-item-info">
+              <p class="catalog-item-image">
+                <a href="#">
+                  <img src="#" alt="Villas at Poco Diablo">
+                </a>
+              </p>
+              <h3>Villas at Poco Diablo</h3>
+              <span class="catalog-item-type">Апартаменты</span>
+              <span class="catalog-item-price">От 2000 Р.</span>
+              <a class="button" href="#">Подробнее</a>
+              <a class="button" href="#">Забронировать</a>
+              <img src="#" alt="Рейтинг жилья 2 из 5">
+              <img src="#">
+              <span class="catalog-item-rating">Рейтинг: 9,2</span>
+            </article>
+          </li>
+        </ul>
+      </section>
     </main>
     <footer class="main-footer">
-      <b>#VISITSEDONA</b>
-      <div class="footer-social">
-        <ul>
-          <li><a class="social-button" href="#">Твиттер</a></li>
-          <li><a class="social-button" href="#">Фейсбук</a></li>
-          <li><a class="social-button" href="#">Ютьюб</a></li>
-        </ul>
-      </div>
+      <a class="social-hashtag" href="#">#VISITSEDONA</a>
+      <ul class="footer-social">
+        <li><a class="social-button" href="#">Twitter</a></li>
+        <li><a class="social-button" href="#">Facebook</a></li>
+        <li><a class="social-button" href="#">Youtube</a></li>
+      </ul>
       <p class="footer-copyright">
         Website by
         <a class="button" href="https://htmlacademy.ru/intensive/htmlcss">HTML Academy</a>
