--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <header class="main-header">
       <nav class="main-navigation">
         <a class="main-header-logo">
+          <h1 class="visually-hidden">Добро пожаловать в Седону</h1>
           <img src="#" alt="Логотип Седона">
         </a>
         <ul class="site-navigation">
@@ -19,24 +20,23 @@
       </nav>
     </header>
     <main class="container">
+      <!-- Будет блок с 2-3 картинками -->
       <img src="#" alt="Добро пожаловать в Седону!">
-      <h1>Седона — небольшой городок в Аризоне,
-заслуживающий большего!</h1>
+      <p class="container-lead">Седона — небольшой городок в Аризоне, заслуживающий большего!</p>
       <p>Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
       <h2>Заинтересовались?</h2>
       <p>Укажите предполагаемые даты поездки,<br>
       и мы покажем Вам лучшие предложения гостиниц в Седоне</p>
+      <!-- Потом исправим -->
       <span class="button">Поиск гостиницы в Седоне</span>
     </main>
     <footer class="main-footer">
-      <b>#VISITSEDONA</b>
-      <div class="footer-social">
-        <ul>
-          <li><a class="social-button" href="#">Твиттер</a></li>
-          <li><a class="social-button" href="#">Фейсбук</a></li>
-          <li><a class="social-button" href="#">Ютьюб</a></li>
-        </ul>
-      </div>
+      <a class="social-hashtag" href="#">#VISITSEDONA</a>
+      <ul class="footer-social">
+        <li><a class="social-button" href="#">Twitter</a></li>
+        <li><a class="social-button" href="#">Facebook</a></li>
+        <li><a class="social-button" href="#">Youtube</a></li>
+      </ul>
       <p class="footer-copyright">
         Website by
         <a class="button" href="https://htmlacademy.ru/intensive/htmlcss">HTML Academy</a>
