index.html 1. Убран тег переноса строки catalog.html 1. Добавлены ссылки для названий типов жилья 2. Изображения со звездочками помещены в <p>

--- a/index.html
+++ b/index.html
@@ -25,8 +25,7 @@
       <p class="container-lead">Седона — небольшой городок в Аризоне, заслуживающий большего!</p>
       <p>Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
       <h2>Заинтересовались?</h2>
-      <p>Укажите предполагаемые даты поездки,<br>
-      и мы покажем Вам лучшие предложения гостиниц в Седоне</p>
+      <p>Укажите предполагаемые даты поездки, и мы покажем Вам лучшие предложения гостиниц в Седоне</p>
       <!-- Потом исправим -->
       <span class="button">Поиск гостиницы в Седоне</span>
     </main>
