--- a/catalog.html
+++ b/catalog.html
@@ -30,15 +30,19 @@
                   <img src="#" alt="Amara Resort & Spa">
                 </a>
               </p>
-              <h3>Amara Resort & Spa</h3>
+              <h3>
+                <a href="#">Amara Resort & Spa</a>
+              </h3>
               <span class="catalog-item-type">Гостиница</span>
               <span class="catalog-item-price">От 4000 Р.</span>
               <a class="button" href="#">Подробнее</a>
               <a class="button" href="#">Забронировать</a>
-              <img src="#" alt="Рейтинг жилья 4 из 5">
-              <img src="#">
-              <img src="#">
-              <img src="#">
+              <p class="star-rating">
+                <img src="#" alt="Рейтинг жилья 4 из 5">
+                <img src="#">
+                <img src="#">
+                <img src="#">
+              </p>
               <span class="catalog-item-rating">Рейтинг: 8,5</span>
             </article>
           </li>
@@ -49,14 +53,18 @@
                   <img src="#" alt="Desert Quail Inn">
                 </a>
               </p>
-              <h3>Desert Quail Inn</h3>
+              <h3>
+                <a href="#">Desert Quail Inn</a>
+              </h3>
               <span class="catalog-item-type">Мотель</span>
               <span class="catalog-item-price">От 3000 Р.</span>
               <a class="button" href="#">Подробнее</a>
               <a class="button" href="#">Забронировать</a>
-              <img src="#" alt="Рейтинг жилья 3 из 5">
-              <img src="#">
-              <img src="#">
+              <p class="star-rating">
+                <img src="#" alt="Рейтинг жилья 3 из 5">
+                <img src="#">
+                <img src="#">
+              </p>
               <span class="catalog-item-rating">Рейтинг: 8,9</span>
             </article>
           </li>
@@ -67,13 +75,17 @@
                   <img src="#" alt="Villas at Poco Diablo">
                 </a>
               </p>
-              <h3>Villas at Poco Diablo</h3>
+              <h3>
+                <a href="#">Villas at Poco Diablo</a>
+              </h3>
               <span class="catalog-item-type">Апартаменты</span>
               <span class="catalog-item-price">От 2000 Р.</span>
               <a class="button" href="#">Подробнее</a>
               <a class="button" href="#">Забронировать</a>
-              <img src="#" alt="Рейтинг жилья 2 из 5">
-              <img src="#">
+              <p class="star-rating">
+                <img src="#" alt="Рейтинг жилья 2 из 5">
+                <img src="#">
+              </p>
               <span class="catalog-item-rating">Рейтинг: 9,2</span>
             </article>
           </li>
