Нарезана графика и добавлена в папку /img Текст пропущен через типограф Были сняты заглушки для некоторых тегов <img> на главной и внутренней страницах

--- a/index.html
+++ b/index.html
@@ -9,35 +9,38 @@
       <nav class="main-navigation">
         <a class="main-header-logo">
           <h1 class="visually-hidden">Добро пожаловать в Седону</h1>
-          <img src="#" alt="Логотип Седона">
+          <img src="img/logo.svg" width="100" height="50" alt="Логотип Седона">
         </a>
         <ul class="site-navigation">
           <li><a href="#">Информация</a></li>
-          <li><a href="#">Фото и видео</a></li>
+          <li><a href="#">Фото и&nbsp;видео</a></li>
           <li><a href="#">Карта штата</a></li>
           <li><a href="catalog.html">Гостиницы</a></li>
         </ul>
       </nav>
     </header>
     <main class="container">
-      <!-- Будет блок с 2-3 картинками -->
-      <img src="#" alt="Добро пожаловать в Седону!">
-      <p class="container-lead">Седона — небольшой городок в Аризоне, заслуживающий большего!</p>
-      <p>Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
+      <div class="complex-image">
+        <img src="img/background.jpg">
+        <img src="img/welcome.svg" alt="Добро пожаловать в Седону!">
+        <img src="img/polygon.svg">
+      </div>
+      <p class="container-lead">Седона&nbsp;&mdash; небольшой городок в&nbsp;Аризоне, заслуживающий большего!</p>
+      <p>Рассмотрим 5&nbsp;причин, по&nbsp;которым Седона круче, чем гранд каньон!</p>
       <h2>Заинтересовались?</h2>
-      <p>Укажите предполагаемые даты поездки, и мы покажем Вам лучшие предложения гостиниц в Седоне</p>
+      <p>Укажите предполагаемые даты поездки, и&nbsp;мы&nbsp;покажем вам лучшие предложения гостиниц в&nbsp;седоне</p>
       <!-- Потом исправим -->
-      <span class="button">Поиск гостиницы в Седоне</span>
+      <span class="button">ПОИСК ГОСТИНИЦЫ В&nbsp;седоне</span>
     </main>
     <footer class="main-footer">
-      <a class="social-hashtag" href="#">#VISITSEDONA</a>
+      <a class="social-hashtag" href="#">#visitSEDONA</a>
       <ul class="footer-social">
         <li><a class="social-button" href="#">Twitter</a></li>
         <li><a class="social-button" href="#">Facebook</a></li>
         <li><a class="social-button" href="#">Youtube</a></li>
       </ul>
       <p class="footer-copyright">
-        Website by
+        Website&nbsp;by
         <a class="button" href="https://htmlacademy.ru/intensive/htmlcss">HTML Academy</a>
       </p>
     </footer>
