--- a/catalog.html
+++ b/catalog.html
@@ -8,11 +8,11 @@
     <header class="main-header">
       <nav class="main-navigation">
         <a class="main-header-logo" href="index.html">
-          <img src="#" alt="Логотип Седона">
+          <img src="img/logo.svg" width="100" height="50" alt="Логотип Седона">
         </a>
         <ul class="site-navigation">
           <li><a href="#">Информация</a></li>
-          <li><a href="#">Фото и видео</a></li>
+          <li><a href="#">Фото и&nbsp;видео</a></li>
           <li><a href="#">Карта штата</a></li>
           <li class="site-navigation-current"><a>Гостиницы</a></li>
         </ul>
@@ -27,21 +27,21 @@
             <article class="catalog-item-info">
               <p class="catalog-item-image">
                 <a href="#">
-                  <img src="#" alt="Amara Resort & Spa">
+                  <img src="img/item-1.jpg" alt="Amara Resort & Spa">
                 </a>
               </p>
               <h3>
-                <a href="#">Amara Resort & Spa</a>
+                <a href="#">Amara Resort &amp;&nbsp;Spa</a>
               </h3>
               <span class="catalog-item-type">Гостиница</span>
-              <span class="catalog-item-price">От 4000 Р.</span>
+              <span class="catalog-item-price">От&nbsp;4000&nbsp;Р.</span>
               <a class="button" href="#">Подробнее</a>
               <a class="button" href="#">Забронировать</a>
               <p class="star-rating">
-                <img src="#" alt="Рейтинг жилья 4 из 5">
-                <img src="#">
-                <img src="#">
-                <img src="#">
+                <img src="img/star.svg" alt="Рейтинг жилья 4 из 5">
+                <img src="img/star.svg">
+                <img src="img/star.svg">
+                <img src="img/star.svg">
               </p>
               <span class="catalog-item-rating">Рейтинг: 8,5</span>
             </article>
@@ -50,20 +50,20 @@
             <article class="catalog-item-info">
               <p class="catalog-item-image">
                 <a href="#">
-                  <img src="#" alt="Desert Quail Inn">
+                  <img src="img/item-2.jpg" alt="Desert Quail Inn">
                 </a>
               </p>
               <h3>
                 <a href="#">Desert Quail Inn</a>
               </h3>
               <span class="catalog-item-type">Мотель</span>
-              <span class="catalog-item-price">От 3000 Р.</span>
+              <span class="catalog-item-price">От&nbsp;3000&nbsp;Р.</span>
               <a class="button" href="#">Подробнее</a>
               <a class="button" href="#">Забронировать</a>
               <p class="star-rating">
-                <img src="#" alt="Рейтинг жилья 3 из 5">
-                <img src="#">
-                <img src="#">
+                <img src="img/star.svg" alt="Рейтинг жилья 3 из 5">
+                <img src="img/star.svg">
+                <img src="img/star.svg">
               </p>
               <span class="catalog-item-rating">Рейтинг: 8,9</span>
             </article>
@@ -72,19 +72,19 @@
             <article class="catalog-item-info">
               <p class="catalog-item-image">
                 <a href="#">
-                  <img src="#" alt="Villas at Poco Diablo">
+                  <img src="img/item-3.jpg" alt="Villas at Poco Diablo">
                 </a>
               </p>
               <h3>
-                <a href="#">Villas at Poco Diablo</a>
+                <a href="#">Villas at&nbsp;Poco Diablo</a>
               </h3>
               <span class="catalog-item-type">Апартаменты</span>
-              <span class="catalog-item-price">От 2000 Р.</span>
+              <span class="catalog-item-price">От&nbsp;2000&nbsp;Р.</span>
               <a class="button" href="#">Подробнее</a>
               <a class="button" href="#">Забронировать</a>
               <p class="star-rating">
-                <img src="#" alt="Рейтинг жилья 2 из 5">
-                <img src="#">
+                <img src="img/star.svg" alt="Рейтинг жилья 2 из 5">
+                <img src="img/star.svg">
               </p>
               <span class="catalog-item-rating">Рейтинг: 9,2</span>
             </article>
@@ -93,14 +93,14 @@
       </section>
     </main>
     <footer class="main-footer">
-      <a class="social-hashtag" href="#">#VISITSEDONA</a>
+      <a class="social-hashtag" href="#">#visitSEDONA</a>
       <ul class="footer-social">
         <li><a class="social-button" href="#">Twitter</a></li>
         <li><a class="social-button" href="#">Facebook</a></li>
         <li><a class="social-button" href="#">Youtube</a></li>
       </ul>
       <p class="footer-copyright">
-        Website by
+        Website&nbsp;by
         <a class="button" href="https://htmlacademy.ru/intensive/htmlcss">HTML Academy</a>
       </p>
     </footer>
