--- a/index.html
+++ b/index.html
@@ -21,16 +21,13 @@
     </header>
     <main class="container">
       <div class="complex-image">
-        <img src="img/background.jpg">
-        <img src="img/welcome.svg" alt="Добро пожаловать в Седону!">
-        <img src="img/polygon.svg">
       </div>
       <p class="container-lead">Седона&nbsp;&mdash; небольшой городок в&nbsp;Аризоне, заслуживающий большего!</p>
       <p>Рассмотрим 5&nbsp;причин, по&nbsp;которым Седона круче, чем гранд каньон!</p>
       <h2>Заинтересовались?</h2>
       <p>Укажите предполагаемые даты поездки, и&nbsp;мы&nbsp;покажем вам лучшие предложения гостиниц в&nbsp;седоне</p>
       <!-- Потом исправим -->
-      <span class="button">ПОИСК ГОСТИНИЦЫ В&nbsp;седоне</span>
+      <span class="button">Поиск гостиницы в&nbsp;Седоне</span>
     </main>
     <footer class="main-footer">
       <a class="social-hashtag" href="#">#visitSEDONA</a>
