--- a/index.html
+++ b/index.html
@@ -24,6 +24,49 @@
       </div>
       <p class="container-lead">Седона&nbsp;&mdash; небольшой городок в&nbsp;Аризоне, заслуживающий большего!</p>
       <p>Рассмотрим 5&nbsp;причин, по&nbsp;которым Седона круче, чем гранд каньон!</p>
+      <aside class="description">
+        <h3>Настоящий городок</h3>
+        <p>— №1 —</p>
+        <p>Седона — не аттракцион для туристов, там течёт своя жизнь</p>
+      </aside>
+      <p><img src="#" alt="Фотография города"></p>
+      <ul class="services">
+        <li>
+          <img src="#" alt="">
+          <h3>Жильё</h3>
+          <p>Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
+        </li>
+        <li>
+          <img src="#" alt="">
+          <h3>Еда</h3>
+          <p>Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
+        </li>
+        <li>
+          <img src="#" alt="">
+          <h3>Сувениры</h3>
+          <p>Не только китайского, но и местного производства!</p>
+        </li>
+      </ul>
+      <aside class="description">
+        <h3>Там есть мост дьявола</h3>
+        <p>— №2 —</p>
+        <p>Да, по нему можно пройти! Если конечно вы осмелитесь</p>
+      </aside>
+      <section>
+        <h3>Небольшая площадь</h3>
+        <p>— №3 —</p>
+        <p>Все достопримечательности находятся очень близко</p>
+      </section>
+      <section>
+        <h3>Красивая дорога</h3>
+        <p>— №4 —</p>
+        <p>Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+      </section>
+      <section>
+        <h3>Мало туристов</h3>
+        <p>— №5 —</p>
+        <p>Большинство едет в гранд каньон и толпится там</p>
+      </section>
       <h2>Заинтересовались?</h2>
       <p>Укажите предполагаемые даты поездки, и&nbsp;мы&nbsp;покажем вам лучшие предложения гостиниц в&nbsp;седоне</p>
       <section class="modal modal-search">
@@ -31,24 +74,25 @@
         <h3 class="visually-hidden">Форма поиска гостиницы</h3>
         <form class="book-form" action="https://echo.htmlacademy.ru" method="post">
           <p class="book-date">
-            <label for="book-arrival">Дата заезда:<img src="img/calendar.svg"></label>
-            <input id="book-arrival" type="date" name="arrival-date" placeholder="24 апреля 2017">
+            <label for="book-arrival">Дата заезда:<img src="img/calendar.svg" alt=""></label>
+            <input id="book-arrival" type="text" name="arrival-date" placeholder="24 апреля 2017">
           </p>
           <p class="book-date">
-            <label for="book-departure">Дата выезда:<img src="img/calendar.svg"></label>
-            <input id="book-departure" type="date" name="departure-date" placeholder="4 июля 2017">
+            <label for="book-departure">Дата выезда:<img src="img/calendar.svg" alt=""></label>
+            <input id="book-departure" type="text" name="departure-date" placeholder="4 июля 2017">
           </p>
           <p class="book-count">
             <label for="book-adults-num">Взрослые:</label>
-            <input id="book-adults-num" type="number" name="adults-num" placeholder="2">
+            <input id="book-adults-num" type="text" name="adults-num" placeholder="2">
           </p>
           <p class="book-count">
             <label for="book-children-num">Дети:</label>
-            <input id="book-children-num" type="number" name="children-num" placeholder="0">
+            <input id="book-children-num" type="text" name="children-num" placeholder="0">
           </p>
           <button class="button" type="submit">Найти</button>
         </form>
       </section>
+      <img src="#" alt="Расположение на карте">
     </main>
     <footer class="main-footer">
       <a class="social-hashtag" href="#">#visitSEDONA</a>
