Тег <aside> в разметке заменен многоуровневым списком, тег нумерации <p> заменен на <span>, убраны теги <img> для декоративных изображений в списке, убраны <section>'ы, текст типографирован, добавлены скрытые заголовки

--- a/catalog.html
+++ b/catalog.html
@@ -20,6 +20,8 @@
     </header>
     <main class="container">
       <h1 class="visually-hidden">Выбор типа жилья</h1>
+      <!-- фильтр -->
+      <h2 class="visually-hidden">Фильтр гостиниц</h2>
       <section class="catalog">
         <h2 class="visually-hidden">Результаты поиска</h2>
         <ul class="catalog-list">
