--- a/index.html
+++ b/index.html
@@ -24,49 +24,50 @@
       </div>
       <p class="container-lead">Седона&nbsp;&mdash; небольшой городок в&nbsp;Аризоне, заслуживающий большего!</p>
       <p>Рассмотрим 5&nbsp;причин, по&nbsp;которым Седона круче, чем гранд каньон!</p>
-      <aside class="description">
-        <h3>Настоящий городок</h3>
-        <p>— №1 —</p>
-        <p>Седона — не аттракцион для туристов, там течёт своя жизнь</p>
-      </aside>
-      <p><img src="#" alt="Фотография города"></p>
-      <ul class="services">
-        <li>
-          <img src="#" alt="">
-          <h3>Жильё</h3>
-          <p>Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
+      <h2 class="visually-hidden">Преимущества Седоны</h2>
+      <ul class="advantages">
+        <li class="advantages-1-2">
+          <h3>Настоящий городок</h3>1111
+          <span>&#8470;&nbsp;1</span>
+          <p>Седона&nbsp;&mdash; не&nbsp;аттракцион для туристов, там течёт своя жизнь</p>
+          <p><img src="#" alt="Фотография города"></p>
+          <ul class="advantages-1">
+            <li>
+              <h4>Жильё</h4>2222
+              <p>Рекомендуем пожить в&nbsp;настоящем мотеле, всё как в&nbsp;кино!</p>
+            </li>
+            <li>
+              <h4>Еда</h4>2222
+              <p>Всегда заказывайте фирменный бургер, вы&nbsp;не&nbsp;разочаруетесь!</p>
+            </li>
+            <li>
+              <h4>Сувениры</h4>2222
+              <p>Не&nbsp;только китайского, но&nbsp;и&nbsp;местного производства!</p>
+            </li>
+          </ul>
         </li>
-        <li>
-          <img src="#" alt="">
-          <h3>Еда</h3>
-          <p>Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
+        <li class="advantages-1-2">
+          <h3>Там есть мост дьявола</h3>1111
+          <span>&#8470;&nbsp;2</span>
+          <p>Да, по&nbsp;нему можно пройти! Если конечно вы&nbsp;осмелитесь</p>
+          <p><img src="#" alt="Фотография моста дьявола"></p>
         </li>
-        <li>
-          <img src="#" alt="">
-          <h3>Сувениры</h3>
-          <p>Не только китайского, но и местного производства!</p>
+        <li class="advantages-3-4-5">
+          <h3>Небольшая площадь</h3>3333
+          <span>&#8470;&nbsp;3</span>
+          <p>Все достопримечательности находятся очень близко</p>
+        </li>
+        <li class="advantages-3-4-5">
+          <h3>Красивая дорога</h3>3333
+          <span>&#8470;&nbsp;4</span>
+          <p>Ехать в&nbsp;Седону из&nbsp;Лас-Вегаса совсем не&nbsp;скучно!</p>
+        </li>
+        <li class="advantages-3-4-5">
+          <h3>Мало туристов</h3>3333
+          <span>&#8470;&nbsp;5</span>
+          <p>Большинство едет в&nbsp;гранд каньон и&nbsp;толпится там</p>
         </li>
       </ul>
-      <aside class="description">
-        <h3>Там есть мост дьявола</h3>
-        <p>— №2 —</p>
-        <p>Да, по нему можно пройти! Если конечно вы осмелитесь</p>
-      </aside>
-      <section>
-        <h3>Небольшая площадь</h3>
-        <p>— №3 —</p>
-        <p>Все достопримечательности находятся очень близко</p>
-      </section>
-      <section>
-        <h3>Красивая дорога</h3>
-        <p>— №4 —</p>
-        <p>Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
-      </section>
-      <section>
-        <h3>Мало туристов</h3>
-        <p>— №5 —</p>
-        <p>Большинство едет в гранд каньон и толпится там</p>
-      </section>
       <h2>Заинтересовались?</h2>
       <p>Укажите предполагаемые даты поездки, и&nbsp;мы&nbsp;покажем вам лучшие предложения гостиниц в&nbsp;седоне</p>
       <section class="modal modal-search">
