Вложенный список помещен в отдельный пунк <li>, уровни заголовков <h4> переправлены на <h3>

--- a/index.html
+++ b/index.html
@@ -27,43 +27,45 @@
       <h2 class="visually-hidden">Преимущества Седоны</h2>
       <ul class="advantages">
         <li class="advantages-1-2">
-          <h3>Настоящий городок</h3>1111
+          <h3>Настоящий городок</h3>
           <span>&#8470;&nbsp;1</span>
           <p>Седона&nbsp;&mdash; не&nbsp;аттракцион для туристов, там течёт своя жизнь</p>
           <p><img src="#" alt="Фотография города"></p>
+        </li>
+        <li>
           <ul class="advantages-1">
             <li>
-              <h4>Жильё</h4>2222
+              <h3>Жильё</h3>
               <p>Рекомендуем пожить в&nbsp;настоящем мотеле, всё как в&nbsp;кино!</p>
             </li>
             <li>
-              <h4>Еда</h4>2222
+              <h3>Еда</h3>
               <p>Всегда заказывайте фирменный бургер, вы&nbsp;не&nbsp;разочаруетесь!</p>
             </li>
             <li>
-              <h4>Сувениры</h4>2222
+              <h3>Сувениры</h3>
               <p>Не&nbsp;только китайского, но&nbsp;и&nbsp;местного производства!</p>
             </li>
           </ul>
         </li>
         <li class="advantages-1-2">
-          <h3>Там есть мост дьявола</h3>1111
+          <h3>Там есть мост дьявола</h3>
           <span>&#8470;&nbsp;2</span>
           <p>Да, по&nbsp;нему можно пройти! Если конечно вы&nbsp;осмелитесь</p>
           <p><img src="#" alt="Фотография моста дьявола"></p>
         </li>
         <li class="advantages-3-4-5">
-          <h3>Небольшая площадь</h3>3333
+          <h3>Небольшая площадь</h3>
           <span>&#8470;&nbsp;3</span>
           <p>Все достопримечательности находятся очень близко</p>
         </li>
         <li class="advantages-3-4-5">
-          <h3>Красивая дорога</h3>3333
+          <h3>Красивая дорога</h3>
           <span>&#8470;&nbsp;4</span>
           <p>Ехать в&nbsp;Седону из&nbsp;Лас-Вегаса совсем не&nbsp;скучно!</p>
         </li>
         <li class="advantages-3-4-5">
-          <h3>Мало туристов</h3>3333
+          <h3>Мало туристов</h3>
           <span>&#8470;&nbsp;5</span>
           <p>Большинство едет в&nbsp;гранд каньон и&nbsp;толпится там</p>
         </li>
