--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           <h3>Настоящий городок</h3>
           <span>&#8470;&nbsp;1</span>
           <p>Седона&nbsp;&mdash; не&nbsp;аттракцион для туристов, там течёт своя жизнь</p>
-          <p><img src="#" alt="Фотография города"></p>
+          <p><img src="img/city.jpg" alt="Фотография города"></p>
         </li>
         <li>
           <ul class="advantages-1">
@@ -52,7 +52,7 @@
           <h3>Там есть мост дьявола</h3>
           <span>&#8470;&nbsp;2</span>
           <p>Да, по&nbsp;нему можно пройти! Если конечно вы&nbsp;осмелитесь</p>
-          <p><img src="#" alt="Фотография моста дьявола"></p>
+          <p><img src="img/bridge.jpg" alt="Фотография моста дьявола"></p>
         </li>
         <li class="advantages-3-4-5">
           <h3>Небольшая площадь</h3>
@@ -95,7 +95,7 @@
           <button class="button" type="submit">Найти</button>
         </form>
       </section>
-      <img src="#" alt="Расположение на карте">
+      <img src="img/map.jpg" alt="Расположение на карте">
     </main>
     <footer class="main-footer">
       <a class="social-hashtag" href="#">#visitSEDONA</a>
