--- a/index.html
+++ b/index.html
@@ -12,10 +12,18 @@
           <img src="img/logo.svg" width="100" height="50" alt="Логотип Седона">
         </a>
         <ul class="site-navigation">
-          <li><a href="#">Информация</a></li>
-          <li><a href="#">Фото и&nbsp;видео</a></li>
-          <li><a href="#">Карта штата</a></li>
-          <li><a href="catalog.html">Гостиницы</a></li>
+          <li>
+            <a href="#">Информация</a>
+          </li>
+          <li>
+            <a href="#">Фото и&nbsp;видео</a>
+          </li>
+          <li>
+            <a href="#">Карта штата</a>
+          </li>
+          <li>
+            <a href="catalog.html">Гостиницы</a>
+          </li>
         </ul>
       </nav>
     </header>
@@ -100,9 +108,15 @@
     <footer class="main-footer">
       <a class="social-hashtag" href="#">#visitSEDONA</a>
       <ul class="footer-social">
-        <li><a class="social-button" href="#">Twitter</a></li>
-        <li><a class="social-button" href="#">Facebook</a></li>
-        <li><a class="social-button" href="#">Youtube</a></li>
+        <li>
+          <a class="social-button" href="#">Twitter</a>
+        </li>
+        <li>
+          <a class="social-button" href="#">Facebook</a>
+        </li>
+        <li>
+          <a class="social-button" href="#">Youtube</a>
+        </li>
       </ul>
       <p class="footer-copyright">
         Website&nbsp;by
