Первичная стилизация проекта 1.Подключен нормализатор normalize.css 2.Подключен стилевой файл style.css 3.Подключен нестандартный шрифт 4.Немного изменил атрибуты class у элемента <p> и <button> для стилезации

--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Седона</title>
+    <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&amp;subset=cyrillic" rel="stylesheet">
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
     <header class="main-header">
@@ -31,7 +34,7 @@
       <div class="complex-image">
       </div>
       <p class="container-lead">Седона&nbsp;&mdash; небольшой городок в&nbsp;Аризоне, заслуживающий большего!</p>
-      <p>Рассмотрим 5&nbsp;причин, по&nbsp;которым Седона круче, чем гранд каньон!</p>
+      <p class="container-advantages">Рассмотрим 5&nbsp;причин, по&nbsp;которым Седона круче, чем гранд каньон!</p>
       <h2 class="visually-hidden">Преимущества Седоны</h2>
       <ul class="advantages">
         <li class="advantages-1-2">
@@ -80,8 +83,8 @@
       </ul>
       <h2>Заинтересовались?</h2>
       <p>Укажите предполагаемые даты поездки, и&nbsp;мы&nbsp;покажем вам лучшие предложения гостиниц в&nbsp;седоне</p>
-      <section class="modal modal-search">
-        <button>Поиск гостиницы в&nbsp;Седоне</button>
+      <section class="modal">
+        <button class="modal-search">Поиск гостиницы в&nbsp;Седоне</button>
         <h3 class="visually-hidden">Форма поиска гостиницы</h3>
         <form class="book-form" action="https://echo.htmlacademy.ru" method="post">
           <p class="book-date">
