1. Для списка навигации добавлен класс общих свойств списков 2. Тегам <h2> <p> ссылкам и кнопкам добавлены дополнительные классы для упрощения селекторов 3. В style.css жирный шрифт заменен шрифтом жирностью 400, убран задний фон в виде картинки, некоторые селекторы облегчены до необходимого уровня

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
           <h1 class="visually-hidden">Добро пожаловать в Седону</h1>
           <img src="img/logo.svg" width="100" height="50" alt="Логотип Седона">
         </a>
-        <ul class="site-navigation">
+        <ul class="list-style site-navigation">
           <li>
             <a href="#">Информация</a>
           </li>
@@ -36,7 +36,7 @@
       <p class="container-lead">Седона&nbsp;&mdash; небольшой городок в&nbsp;Аризоне, заслуживающий большего!</p>
       <p class="container-advantages">Рассмотрим 5&nbsp;причин, по&nbsp;которым Седона круче, чем гранд каньон!</p>
       <h2 class="visually-hidden">Преимущества Седоны</h2>
-      <ul class="advantages">
+      <ul class="list-style advantages">
         <li class="advantages-1-2">
           <h3>Настоящий городок</h3>
           <span>&#8470;&nbsp;1</span>
@@ -44,7 +44,7 @@
           <p><img src="img/city.jpg" alt="Фотография города"></p>
         </li>
         <li>
-          <ul class="advantages-1">
+          <ul class="list-style advantages-1">
             <li>
               <h3>Жильё</h3>
               <p>Рекомендуем пожить в&nbsp;настоящем мотеле, всё как в&nbsp;кино!</p>
@@ -81,10 +81,10 @@
           <p>Большинство едет в&nbsp;гранд каньон и&nbsp;толпится там</p>
         </li>
       </ul>
-      <h2>Заинтересовались?</h2>
-      <p>Укажите предполагаемые даты поездки, и&nbsp;мы&nbsp;покажем вам лучшие предложения гостиниц в&nbsp;седоне</p>
+      <h2 class="interest">Заинтересовались?</h2>
+      <p class="interest-info">Укажите предполагаемые даты поездки, и&nbsp;мы&nbsp;покажем вам лучшие предложения гостиниц в&nbsp;седоне</p>
       <section class="modal">
-        <button class="modal-search">Поиск гостиницы в&nbsp;Седоне</button>
+        <button class="button-common button-brown button-modal modal-search">Поиск гостиницы в&nbsp;Седоне</button>
         <h3 class="visually-hidden">Форма поиска гостиницы</h3>
         <form class="book-form" action="https://echo.htmlacademy.ru" method="post">
           <p class="book-date">
@@ -103,14 +103,14 @@
             <label for="book-children-num">Дети:</label>
             <input id="book-children-num" type="text" name="children-num" placeholder="0">
           </p>
-          <button class="button" type="submit">Найти</button>
+          <button class="button-common button-blue button-find" type="submit">Найти</button>
         </form>
       </section>
       <img src="img/map.jpg" alt="Расположение на карте">
     </main>
     <footer class="main-footer">
       <a class="social-hashtag" href="#">#visitSEDONA</a>
-      <ul class="footer-social">
+      <ul class="list-style footer-social">
         <li>
           <a class="social-button" href="#">Twitter</a>
         </li>
