--- a/catalog.html
+++ b/catalog.html
@@ -13,7 +13,7 @@
         <a class="main-header-logo" href="index.html">
           <img src="img/logo.svg" width="100" height="50" alt="Логотип Седона">
         </a>
-        <ul class="site-navigation">
+        <ul class="list-style site-navigation">
           <li>
             <a href="#">Информация</a>
           </li>
@@ -35,7 +35,7 @@
       <form class="content-filter" action="https://echo.htmlacademy.ru" method="get">
         <fieldset>
           <legend>Инфраструктура:</legend>
-          <ul class="options-list">
+          <ul class="list-style options-list">
             <li>
               <label for="filter-pool">Бассейн</label>
               <input id="filter-pool" type="checkbox" name="pool" checked>
@@ -52,7 +52,7 @@
         </fieldset>
         <fieldset>
           <legend>Тип жилья:</legend>
-          <ul class="options-list">
+          <ul class="list-style options-list">
             <li>
               <label for="filter-hotel">Гостиница</label>
               <input id="filter-hotel" type="checkbox" name="hotel" checked>
@@ -82,7 +82,7 @@
         <h2 class="visually-hidden">Сортировка результатов поиска</h2>
         <p class="search-found">Найдено: 3</p>
         <p class="search-sort">Сортировка:</p>
-        <ul>
+        <ul class="list-style">
           <li class="sort-selected">
             <a href="#">По&nbsp;цене</a>
           </li>
@@ -93,7 +93,7 @@
             <a href="#">По&nbsp;рейтингу</a>
           </li>
         </ul>
-        <ul class="sort-order">
+        <ul class="list-style sort-order">
           <li>
             <a href="#"><img src="img/icon-up-dir.svg" alt="Сортировка по возрастанию"></a>
           </li>
@@ -104,7 +104,7 @@
       </section>
       <section class="catalog">
         <h2 class="visually-hidden">Результаты поиска</h2>
-        <ul class="catalog-list">
+        <ul class="list-style catalog-list">
           <li class="catalog-item">
             <article class="catalog-item-info">
               <p class="catalog-item-image">
@@ -113,12 +113,12 @@
                 </a>
               </p>
               <h3>
-                <a href="#">Amara Resort &amp;&nbsp;Spa</a>
+                <a class="item-header" href="#">Amara Resort &amp;&nbsp;Spa</a>
               </h3>
               <span class="catalog-item-type">Гостиница</span>
               <span class="catalog-item-price">От&nbsp;4000&nbsp;Р.</span>
-              <a class="button" href="#">Подробнее</a>
-              <a class="button" href="#">Забронировать</a>
+              <a class="button-common button-blue detail" href="#">Подробнее</a>
+              <a class="button-common button-brown book" href="#">Забронировать</a>
               <p class="star-rating">
                 <img src="img/star.svg" alt="Рейтинг жилья 4 из 5">
                 <img src="img/star.svg">
@@ -136,12 +136,12 @@
                 </a>
               </p>
               <h3>
-                <a href="#">Desert Quail Inn</a>
+                <a class="item-header" href="#">Desert Quail Inn</a>
               </h3>
               <span class="catalog-item-type">Мотель</span>
               <span class="catalog-item-price">От&nbsp;3000&nbsp;Р.</span>
-              <a class="button" href="#">Подробнее</a>
-              <a class="button" href="#">Забронировать</a>
+              <a class="button-common button-blue detail" href="#">Подробнее</a>
+              <a class="button-common button-brown book" href="#">Забронировать</a>
               <p class="star-rating">
                 <img src="img/star.svg" alt="Рейтинг жилья 3 из 5">
                 <img src="img/star.svg">
@@ -158,12 +158,12 @@
                 </a>
               </p>
               <h3>
-                <a href="#">Villas at&nbsp;Poco Diablo</a>
+                <a class="item-header" href="#">Villas at&nbsp;Poco Diablo</a>
               </h3>
               <span class="catalog-item-type">Апартаменты</span>
               <span class="catalog-item-price">От&nbsp;2000&nbsp;Р.</span>
-              <a class="button" href="#">Подробнее</a>
-              <a class="button" href="#">Забронировать</a>
+              <a class="button-common button-blue detail" href="#">Подробнее</a>
+              <a class="button-common button-brown book" href="#">Забронировать</a>
               <p class="star-rating">
                 <img src="img/star.svg" alt="Рейтинг жилья 2 из 5">
                 <img src="img/star.svg">
@@ -176,7 +176,7 @@
     </main>
     <footer class="main-footer">
       <a class="social-hashtag" href="#">#visitSEDONA</a>
-      <ul class="footer-social">
+      <ul class="list-style footer-social">
         <li>
           <a class="social-button" href="#">Twitter</a>
         </li>
