--- a/index.html
+++ b/index.html
@@ -37,14 +37,14 @@
       <p class="container-advantages">Рассмотрим 5&nbsp;причин, по&nbsp;которым Седона круче, чем гранд каньон!</p>
       <h2 class="visually-hidden">Преимущества Седоны</h2>
       <ul class="list-style advantages">
-        <li class="advantages-1-2">
+        <li class="main-advantages">
           <h3>Настоящий городок</h3>
           <span>&#8470;&nbsp;1</span>
           <p>Седона&nbsp;&mdash; не&nbsp;аттракцион для туристов, там течёт своя жизнь</p>
           <p><img src="img/city.jpg" alt="Фотография города"></p>
         </li>
         <li>
-          <ul class="list-style advantages-1">
+          <ul class="list-style sub-main-advantages">
             <li>
               <h3>Жильё</h3>
               <p>Рекомендуем пожить в&nbsp;настоящем мотеле, всё как в&nbsp;кино!</p>
@@ -59,23 +59,23 @@
             </li>
           </ul>
         </li>
-        <li class="advantages-1-2">
+        <li class="main-advantages">
           <h3>Там есть мост дьявола</h3>
           <span>&#8470;&nbsp;2</span>
           <p>Да, по&nbsp;нему можно пройти! Если конечно вы&nbsp;осмелитесь</p>
           <p><img src="img/bridge.jpg" alt="Фотография моста дьявола"></p>
         </li>
-        <li class="advantages-3-4-5">
+        <li class="secondary-advantages">
           <h3>Небольшая площадь</h3>
           <span>&#8470;&nbsp;3</span>
           <p>Все достопримечательности находятся очень близко</p>
         </li>
-        <li class="advantages-3-4-5">
+        <li class="secondary-advantages">
           <h3>Красивая дорога</h3>
           <span>&#8470;&nbsp;4</span>
           <p>Ехать в&nbsp;Седону из&nbsp;Лас-Вегаса совсем не&nbsp;скучно!</p>
         </li>
-        <li class="advantages-3-4-5">
+        <li class="secondary-advantages">
           <h3>Мало туристов</h3>
           <span>&#8470;&nbsp;5</span>
           <p>Большинство едет в&nbsp;гранд каньон и&nbsp;толпится там</p>
