Убрал повторяющиеся свойства, некоторые классы в html разметке переименовал и для body задал жирность bold потому что его гораздо больше на страничках чем обычного

--- a/catalog.html
+++ b/catalog.html
@@ -76,7 +76,7 @@
           <input id="filter-slider-max" type="text" name="slider-max" placeholder="3000">
         </fieldset>
         -->
-        <button class="button" type="submit">Показать</button>
+        <button type="submit">Показать</button>
       </form>
       <section class="search-result">
         <h2 class="visually-hidden">Сортировка результатов поиска</h2>
@@ -113,19 +113,19 @@
                 </a>
               </p>
               <h3>
-                <a class="item-header" href="#">Amara Resort &amp;&nbsp;Spa</a>
+                <a class="item-name" href="#">Amara Resort &amp;&nbsp;Spa</a>
               </h3>
-              <span class="catalog-item-type">Гостиница</span>
-              <span class="catalog-item-price">От&nbsp;4000&nbsp;Р.</span>
-              <a class="button-common button-blue detail" href="#">Подробнее</a>
-              <a class="button-common button-brown book" href="#">Забронировать</a>
+              <span class="item-info">Гостиница</span>
+              <span class="item-info">От&nbsp;4000&nbsp;Р.</span>
+              <a class="button-catalog button button-blue" href="#">Подробнее</a>
+              <a class="button-catalog button button-brown" href="#">Забронировать</a>
               <p class="star-rating">
                 <img src="img/star.svg" alt="Рейтинг жилья 4 из 5">
                 <img src="img/star.svg">
                 <img src="img/star.svg">
                 <img src="img/star.svg">
               </p>
-              <span class="catalog-item-rating">Рейтинг: 8,5</span>
+              <span class="item-rating">Рейтинг: 8,5</span>
             </article>
           </li>
           <li class="catalog-item">
@@ -136,18 +136,18 @@
                 </a>
               </p>
               <h3>
-                <a class="item-header" href="#">Desert Quail Inn</a>
+                <a class="item-name" href="#">Desert Quail Inn</a>
               </h3>
-              <span class="catalog-item-type">Мотель</span>
-              <span class="catalog-item-price">От&nbsp;3000&nbsp;Р.</span>
-              <a class="button-common button-blue detail" href="#">Подробнее</a>
-              <a class="button-common button-brown book" href="#">Забронировать</a>
+              <span class="item-info">Мотель</span>
+              <span class="item-info">От&nbsp;3000&nbsp;Р.</span>
+              <a class="button-catalog button button-blue" href="#">Подробнее</a>
+              <a class="button-catalog button button-brown" href="#">Забронировать</a>
               <p class="star-rating">
                 <img src="img/star.svg" alt="Рейтинг жилья 3 из 5">
                 <img src="img/star.svg">
                 <img src="img/star.svg">
               </p>
-              <span class="catalog-item-rating">Рейтинг: 8,9</span>
+              <span class="item-rating">Рейтинг: 8,9</span>
             </article>
           </li>
           <li class="catalog-item">
@@ -158,17 +158,17 @@
                 </a>
               </p>
               <h3>
-                <a class="item-header" href="#">Villas at&nbsp;Poco Diablo</a>
+                <a class="item-name" href="#">Villas at&nbsp;Poco Diablo</a>
               </h3>
-              <span class="catalog-item-type">Апартаменты</span>
-              <span class="catalog-item-price">От&nbsp;2000&nbsp;Р.</span>
-              <a class="button-common button-blue detail" href="#">Подробнее</a>
-              <a class="button-common button-brown book" href="#">Забронировать</a>
+              <span class="item-info">Апартаменты</span>
+              <span class="item-info">От&nbsp;2000&nbsp;Р.</span>
+              <a class="button-catalog button button-blue" href="#">Подробнее</a>
+              <a class="button-catalog button button-brown" href="#">Забронировать</a>
               <p class="star-rating">
                 <img src="img/star.svg" alt="Рейтинг жилья 2 из 5">
                 <img src="img/star.svg">
               </p>
-              <span class="catalog-item-rating">Рейтинг: 9,2</span>
+              <span class="item-rating">Рейтинг: 9,2</span>
             </article>
           </li>
         </ul>
@@ -178,18 +178,18 @@
       <a class="social-hashtag" href="#">#visitSEDONA</a>
       <ul class="list-style footer-social">
         <li>
-          <a class="social-button" href="#">Twitter</a>
+          <a class="social-button button-blue" href="#">Twitter</a>
         </li>
         <li>
-          <a class="social-button" href="#">Facebook</a>
+          <a class="social-button button-blue" href="#">Facebook</a>
         </li>
         <li>
-          <a class="social-button" href="#">Youtube</a>
+          <a class="social-button button-blue" href="#">Youtube</a>
         </li>
       </ul>
       <p class="footer-copyright">
         Website&nbsp;by
-        <a class="button" href="https://htmlacademy.ru/intensive/htmlcss">HTML Academy</a>
+        <a class="" href="https://htmlacademy.ru/intensive/htmlcss">HTML Academy</a>
       </p>
     </footer>
   </body>
