Вернул комментарий со слайдером

--- a/catalog.html
+++ b/catalog.html
@@ -69,6 +69,15 @@
             </li>
           </ul>
         </fieldset>
+        <!-- Фильтр по стоимости в сутки
+        <fieldset>
+          <legend>Стоимость в&nbsp;сутки (Р):</legend>
+          <label for="filter-slider-min">От</label>
+          <input id="filter-slider-min" type="text" name="slider-min" placeholder="0">
+          <label for="filter-slider-max">До</label>
+          <input id="filter-slider-max" type="text" name="slider-max" placeholder="3000">
+        </fieldset>
+        -->
         <button type="submit">Показать</button>
       </form>
       <section class="search-result">
