Переделана сетка внутренней страницы

--- a/catalog.html
+++ b/catalog.html
@@ -108,7 +108,7 @@
           <li class="catalog-item">
             <article class="catalog-item-info">
               <p class="catalog-item-image">
-                <a href="#">
+                <a class="item-image" href="#">
                   <img src="img/item-1.jpg" width="135" height="90" alt="Amara Resort & Spa">
                 </a>
               </p>
@@ -171,7 +171,7 @@
                 </div>
               </div>
               <div class="rating-wrapper">
-                <ul class="list-style star-rating-list">
+                <!--<ul class="list-style star-rating-list">
                   <li>
                     <img width="18" height="17"  src="img/star.svg" alt="Рейтинг жилья 3 из 5">
                   </li>
@@ -181,7 +181,12 @@
                   <li>
                     <img width="18" height="17"  src="img/star.svg">
                   </li>
-                </ul>
+                </ul>-->
+                <p class="star-rating">
+                  <img width="18" height="17" src="img/star.svg" alt="Рейтинг жилья 3 из 5">
+                  <img width="18" height="17" src="img/star.svg">
+                  <img width="18" height="17" src="img/star.svg">
+                </p>
                 <span class="item-rating">Рейтинг: 8,9</span>
               </div>
             </article>
@@ -207,14 +212,18 @@
                 </div>
               </div>
               <div class="rating-wrapper">
-                <ul class="list-style star-rating-list">
+                <!--<ul class="list-style star-rating-list">
                   <li>
                     <img width="18" height="17"  src="img/star.svg" alt="Рейтинг жилья 2 из 5">
                   </li>
                   <li>
                     <img width="18" height="17"  src="img/star.svg">
                   </li>
-                </ul>
+                </ul>-->
+                <p class="star-rating">
+                  <img width="18" height="17" src="img/star.svg" alt="Рейтинг жилья 2 из 5">
+                  <img width="18" height="17" src="img/star.svg">
+                </p>
                 <span class="item-rating">Рейтинг: 9,2</span>
               </div>
             </article>
