--- a/index.html
+++ b/index.html
@@ -38,49 +38,53 @@
         <p class="container-advantages">Рассмотрим 5&nbsp;причин, по&nbsp;которым Седона круче, чем гранд каньон!</p>
       </div>
       <h2 class="visually-hidden">Преимущества Седоны</h2>
-      <ul class="list-style">
+      <ul class="advantages-list list-style">
         <li class="main-advantages">
-          <h3>Настоящий городок</h3>
-          <span>&#8470;&nbsp;1</span>
-          <p>Седона&nbsp;&mdash; не&nbsp;аттракцион для туристов, там течёт своя жизнь</p>
-          <p><img src="img/city.jpg" alt="Фотография города"></p>
+          <div class="main-advantages-wrapper">
+            <h3 class="main-advantage-1">Настоящий городок</h3>
+            <span>&#8470;&nbsp;1</span>
+            <p class="main-advantage-1-info advantage-info">Седона&nbsp;&mdash; не&nbsp;аттракцион для туристов, там течёт своя жизнь</p>
+          </div>
+          <p class="main-advantages-image"><img src="img/city.jpg" alt="Фотография города"></p>
         </li>
         <li>
           <ul class="list-style sub-main-advantages">
             <li>
-              <h3>Жильё</h3>
-              <p>Рекомендуем пожить в&nbsp;настоящем мотеле, всё как в&nbsp;кино!</p>
+              <h3 class="housing">Жильё</h3>
+              <p class="advantage-info">Рекомендуем пожить в&nbsp;настоящем мотеле, всё как в&nbsp;кино!</p>
             </li>
             <li>
-              <h3>Еда</h3>
-              <p>Всегда заказывайте фирменный бургер, вы&nbsp;не&nbsp;разочаруетесь!</p>
+              <h3 class="food">Еда</h3>
+              <p class="advantage-info">Всегда заказывайте фирменный бургер, вы&nbsp;не&nbsp;разочаруетесь!</p>
             </li>
             <li>
-              <h3>Сувениры</h3>
-              <p>Не&nbsp;только китайского, но&nbsp;и&nbsp;местного производства!</p>
+              <h3 class="souvenirs">Сувениры</h3>
+              <p class="advantage-info">Не&nbsp;только китайского, но&nbsp;и&nbsp;местного производства!</p>
             </li>
           </ul>
         </li>
         <li class="main-advantages">
-          <h3>Там есть мост дьявола</h3>
-          <span>&#8470;&nbsp;2</span>
-          <p>Да, по&nbsp;нему можно пройти! Если конечно вы&nbsp;осмелитесь</p>
-          <p><img src="img/bridge.jpg" alt="Фотография моста дьявола"></p>
+          <div class="main-advantages-wrapper">
+            <h3 class="main-advantage-2">Там есть мост дьявола</h3>
+            <span>&#8470;&nbsp;2</span>
+            <p class="main-advantage-2-info advantage-info">Да, по&nbsp;нему можно пройти! Если конечно вы&nbsp;осмелитесь</p>
+          </div>
+          <p class="main-advantages-image"><img src="img/bridge.jpg" alt="Фотография моста дьявола"></p>
         </li>
         <li class="secondary-advantages">
           <h3>Небольшая площадь</h3>
           <span>&#8470;&nbsp;3</span>
-          <p>Все достопримечательности находятся очень близко</p>
+          <p class="advantage-info">Все достопримечательности находятся очень близко</p>
         </li>
         <li class="secondary-advantages">
           <h3>Красивая дорога</h3>
           <span>&#8470;&nbsp;4</span>
-          <p>Ехать в&nbsp;Седону из&nbsp;Лас-Вегаса совсем не&nbsp;скучно!</p>
+          <p class="advantage-info">Ехать в&nbsp;Седону из&nbsp;Лас-Вегаса совсем не&nbsp;скучно!</p>
         </li>
         <li class="secondary-advantages">
           <h3>Мало туристов</h3>
           <span>&#8470;&nbsp;5</span>
-          <p>Большинство едет в&nbsp;гранд каньон и&nbsp;толпится там</p>
+          <p class="advantage-info">Большинство едет в&nbsp;гранд каньон и&nbsp;толпится там</p>
         </li>
       </ul>
       <div class="interest-wrapper">
