--- a/index.html
+++ b/index.html
@@ -51,15 +51,15 @@
           <ul class="list-style sub-main-advantages">
             <li>
               <h3 class="housing">Жильё</h3>
-              <p class="advantage-info">Рекомендуем пожить в&nbsp;настоящем мотеле, всё как в&nbsp;кино!</p>
+              <p class="sub-advantage-1 advantage-info">Рекомендуем пожить в&nbsp;настоящем мотеле, всё как в&nbsp;кино!</p>
             </li>
             <li>
               <h3 class="food">Еда</h3>
-              <p class="advantage-info">Всегда заказывайте фирменный бургер, вы&nbsp;не&nbsp;разочаруетесь!</p>
+              <p class="sub-advantage-2 advantage-info">Всегда заказывайте фирменный бургер, вы&nbsp;не&nbsp;разочаруетесь!</p>
             </li>
             <li>
               <h3 class="souvenirs">Сувениры</h3>
-              <p class="advantage-info">Не&nbsp;только китайского, но&nbsp;и&nbsp;местного производства!</p>
+              <p class="sub-advantage-3 advantage-info">Не&nbsp;только китайского, но&nbsp;и&nbsp;местного производства!</p>
             </li>
           </ul>
         </li>
@@ -74,17 +74,17 @@
         <li class="secondary-advantages">
           <h3>Небольшая площадь</h3>
           <span>&#8470;&nbsp;3</span>
-          <p class="advantage-info">Все достопримечательности находятся очень близко</p>
+          <p class="secondary-advantage-1 advantage-info">Все достопримечательности находятся очень близко</p>
         </li>
         <li class="secondary-advantages">
           <h3>Красивая дорога</h3>
           <span>&#8470;&nbsp;4</span>
-          <p class="advantage-info">Ехать в&nbsp;Седону из&nbsp;Лас-Вегаса совсем не&nbsp;скучно!</p>
+          <p class="secondary-advantage-2 advantage-info">Ехать в&nbsp;Седону из&nbsp;Лас-Вегаса совсем не&nbsp;скучно!</p>
         </li>
         <li class="secondary-advantages">
           <h3>Мало туристов</h3>
           <span>&#8470;&nbsp;5</span>
-          <p class="advantage-info">Большинство едет в&nbsp;гранд каньон и&nbsp;толпится там</p>
+          <p class="secondary-advantage-3 advantage-info">Большинство едет в&nbsp;гранд каньон и&nbsp;толпится там</p>
         </li>
       </ul>
       <div class="interest-wrapper">
