--- a/catalog.html
+++ b/catalog.html
@@ -34,36 +34,36 @@
       <h2 class="visually-hidden">Фильтр гостиниц</h2>
       <form class="content-filter" action="https://echo.htmlacademy.ru" method="get">
         <fieldset>
-          <legend>Инфраструктура:</legend>
+          <legend class="filter-header">Инфраструктура:</legend>
           <ul class="list-style options-list">
             <li>
-              <label for="filter-pool">Бассейн</label>
               <input id="filter-pool" type="checkbox" name="pool" checked>
+              <label for="filter-pool">Бассейн</label>
             </li>
             <li>
-              <label for="filter-parking">Парковка</label>
               <input id="filter-parking" type="checkbox" name="parking">
+              <label for="filter-parking">Парковка</label>
             </li>
             <li>
-              <label for="filter-wi-fi">Wi-Fi</label>
               <input id="filter-wi-fi" type="checkbox" name="wi-fi">
+              <label for="filter-wi-fi">Wi-Fi</label>
             </li>
           </ul>
         </fieldset>
         <fieldset>
-          <legend>Тип жилья:</legend>
+          <legend class="filter-header">Тип жилья:</legend>
           <ul class="list-style options-list">
             <li>
-              <label for="filter-hotel">Гостиница</label>
               <input id="filter-hotel" type="checkbox" name="hotel" checked>
+              <label for="filter-hotel">Гостиница</label>
             </li>
             <li>
-              <label for="filter-motel">Мотель</label>
               <input id="filter-motel" type="checkbox" name="motel" checked>
+              <label for="filter-motel">Мотель</label>
             </li>
             <li>
-              <label for="filter-apartments">Апартаменты</label>
               <input id="filter-apartments" type="checkbox" name="apartments" checked>
+              <label for="filter-apartments">Апартаменты</label>
             </li>
           </ul>
         </fieldset>
@@ -82,7 +82,7 @@
         <h2 class="visually-hidden">Сортировка результатов поиска</h2>
         <p class="search-found">Найдено: 3</p>
         <p class="search-sort">Сортировка:</p>
-        <ul class="list-style">
+        <ul class="list-style sort-type">
           <li class="sort-selected">
             <a href="#">По&nbsp;цене</a>
           </li>
@@ -94,11 +94,23 @@
           </li>
         </ul>
         <ul class="list-style sort-order">
-          <li>
-            <a href="#"><img src="img/icon-up-dir.svg" alt="Сортировка по возрастанию"></a>
+          <li class="sort-order-up">
+            <!--<a href="#"><img src="img/icon-up-dir.svg" alt="Сортировка по возрастанию"></a>-->
+            <a href="#">
+              <svg height="10" width="11" xmlns="http://www.w3.org/2000/svg" alt="Сортировка по возрастанию">
+                <title>Сортировка по возрастанию</title>
+                <path d="M5.5 0L0 10h11z" fill="#cacaca"/>
+              </svg>
+            </a>
           </li>
-          <li>
-            <a class="sort-order-selected" href="#"><img src="img/icon-down-dir.svg" alt="Сортировка по убыванию"></a>
+          <li class="sort-order-down">
+            <!--<a class="sort-order-selected" href="#"><img src="img/icon-down-dir.svg" alt="Сортировка по убыванию"></a>-->
+            <a class="sort-order-selected" href="#">
+              <svg height="10" width="11" xmlns="http://www.w3.org/2000/svg" alt="Сортировка по убыванию">
+                <title>Сортировка по убыванию</title>
+                <path d="M5.5 10L0 0h11" fill="#cacaca"/>
+              </svg>
+            </a>
           </li>
         </ul>
       </section>
